Fixes a bug in the layout yaml snippit

--- a/_posts/2015-01-10-docker.md
+++ b/_posts/2015-01-10-docker.md
@@ -1,4 +1,7 @@
---- layout: post title: "A Few Notes on Docker" ---
+---
+layout: post
+title: "A Few Notes on Docker"
+---
 
 ## My experience with Docker ##
 
