--- a/_posts/2015-01-10-docker.md
+++ b/_posts/2015-01-10-docker.md
@@ -41,18 +41,18 @@ Docker itself runs as root, and your programs which run in a Docker container
 will typically be run as root as well. This opens up the potential for security
 holes, as the Kernel offers up some functionality whose isolation is based on
 the process' effective group and user ids.  One such security hole was
-identified around the Kernel [Keychain][1], and while this particular
-vulnerability was addressed, it's hard to know what other ones exist.
+identified around the Kernel
+[Keychain](http://www.projectatomic.io/blog/2014/09/yet-another-reason-containers-don-t-contain-kernel-keyrings/ "Containers don't contain"), and while this particular vulnerability was
+addressed, it's hard to know what other ones exist.
 
 ### Secure ###
 
-Docker images are listed as "verified", but in fact they are [not][2]. Also,
-there is no real visibility into their remote build process, so it is nearly
+Docker images are listed as "verified", but in fact they are [not](https://titanous.com/posts/docker-insecurity "Docker insecurity"). Also, there is no real visibility into their remote build process, so it is nearly
 impossible to verify what they are shipping you when you import a base image to
 build from.
 
 Also, a vast majority of Docker images simply include stuff they don't need to.
-One simple example can be found in one of the more popular [Logstash][4] images
+One simple example can be found in one of the more popular [Logstash](https://registry.hub.docker.com/u/pblittle/docker-logstash/ "Docker Logstash") images
 on DockerHub. By default, the image executes a shell script which preforms a
 `wget` against the author's Github account to obtain a config file every time
 it is started up. It also starts up and exposes its own webserver to serve the
@@ -93,7 +93,7 @@ Finally, the meat of this article.
 ### Watch Your /usr Disk Space ###
 
 Docker images can easily and quickly grow to be over 1GB in size (especially if
-you follow the [recommendation][5] of building images on the top of a full OS
+you follow the [recommendation](https://docs.docker.com/articles/dockerfile_best-practices/#from) of building images on the top of a full OS
 install), and they're all stored in a docker directory down `/usr/`. On most
 production boxes, `/usr/` is not typically on the largest partition on the box,
 so be sure you have monitors to let you know when this partition is getting
@@ -108,7 +108,7 @@ overhead of requiring the docker image to have sshd, bash, TTYs,  and their
 dependencies installed; there are simply better ways of handling the issues
 which `sshd` in a container helps solve.
 
-See [here][6] for a more comprehensive discussion of the problems and some
+See [here](http://gregoryszorc.com/blog/2014/10/13/deterministic-and-minimal-docker-images/ "Deterministic and Minimal Docker Images") for a more comprehensive discussion of the problems and some
 alternatives to running `sshd`.
 
 ### You don't need a full OS install! ###
@@ -129,7 +129,7 @@ create minimal installs which provide only the necessary files while omitting
 the parts you don't need.
 
 That raises the question of why do so many images, tutorials, and Docker
-[themselves][5] recommend that you base your images off of full OS images? It
+[themselves](https://docs.docker.com/articles/dockerfile_best-practices/#from) recommend that you base your images off of full OS images? It
 makes installs and modifications really, really simple; that's really about it.
 Having a full OS image allows you to use tools like apt, gcc, bash, and it
 removes the requirement of caring about what dynamic libraries your program
@@ -138,8 +138,7 @@ links against.
 My question is, though, if all you're going to run in the container is a Go web
 application, why do you need /bin/mount?
 
-Examples of how to minimize your Docker image size can be found in the
-appendix: [6][6], [7][7]
+Examples of how to minimize your Docker image size can be found [here](http://gregoryszorc.com/blog/2014/10/13/deterministic-and-minimal-docker-images/ "Deterministic and Minimal Docker Images") and [here](https://medium.com/@kelseyhightower/optimizing-docker-images-for-static-binaries-b5696e26eb07 "Optimizing Docker Images for Static Binaries")
 
 ### Dockerfiles are not enough ###
 
@@ -198,13 +197,4 @@ you will in deploying Docker.
 
 Containers in general are an exciting prospect, and I look forward to watching
 the field grow.
-
-## Appendix ##
-[1](http://www.projectatomic.io/blog/2014/09/yet-another-reason-containers-don-t-contain-kernel-keyrings/ "Containers don't contain")
-[2](https://titanous.com/posts/docker-insecurity "Docker insecurity")
-[3](http://jpetazzo.github.io/2014/06/23/docker-ssh-considered-evil/ "Docker SSH considered Evil")
-[4](https://registry.hub.docker.com/u/pblittle/docker-logstash/ "Docker Logstash")
-[5](https://docs.docker.com/articles/dockerfile_best-practices/#from)
-[6](http://gregoryszorc.com/blog/2014/10/13/deterministic-and-minimal-docker-images/ "Deterministic and Minimal Docker Images")
-[7](https://medium.com/@kelseyhightower/optimizing-docker-images-for-static-binaries-b5696e26eb07 "Optimizing Docker Images for Static Binaries")
 
